update on business nam

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nexus Solutions | Professional Business Services</title>
+    <title>Increo Creative Solutions | Professional Business Services</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <style>
@@ -1218,7 +1218,7 @@
                 <div class="testimonial-slider">
                     <div class="testimonial-slide active">
                         <div class="testimonial-content">
-                            "Nexus Solutions transformed our business operations with their innovative approach and
+                            "Increo Creative Solutions transformed our business operations with their innovative approach and
                             technical expertise. Their team was professional, responsive, and delivered exceptional
                             results."
                         </div>
@@ -1227,7 +1227,7 @@
                     </div>
                     <div class="testimonial-slide">
                         <div class="testimonial-content">
-                            "Working with Nexus Solutions was a game-changer for our company. Their strategic insights
+                            "Working with Increo Creative Solutions was a game-changer for our company. Their strategic insights
                             and tailored solutions helped us achieve significant growth in a competitive market."
                         </div>
                         <div class="testimonial-author">Michael Chen</div>
@@ -1235,7 +1235,7 @@
                     </div>
                     <div class="testimonial-slide">
                         <div class="testimonial-content">
-                            "The team at Nexus Solutions consistently exceeds our expectations. Their dedication to
+                            "The team at Increo Creative Solutions consistently exceeds our expectations. Their dedication to
                             client success and technical expertise are truly impressive. Highly recommended!"
                         </div>
                         <div class="testimonial-author">Emily Rodriguez</div>
@@ -1324,7 +1324,7 @@
             <!-- Hero Section -->
             <section class="hero about-hero">
                 <div class="hero-content">
-                    <h1 class="animate">About Nexus Solutions</h1>
+                    <h1 class="animate">About Increo Creative Solutions</h1>
                     <p class="animate">Learn about our mission, values, and the dedicated team behind our success</p>
                 </div>
             </section>
@@ -1337,7 +1337,7 @@
                 </div>
                 <div class="container" style="max-width: 800px; margin: 0 auto;">
                     <p style="margin-bottom: 1.5rem; line-height: 1.8; color: #555;">
-                        Founded in 2010, Nexus Solutions began with a simple mission: to provide innovative business
+                        Founded in 2010, Increo Creative Solutions began with a simple mission: to provide innovative business
                         solutions that drive growth and success for our clients. Starting as a small team of technology
                         enthusiasts with a passion for problem-solving, we have grown into a full-service business
                         solutions company with expertise across multiple industries.
@@ -1348,7 +1348,7 @@
                         client satisfaction has been the cornerstone of our success.
                     </p>
                     <p style="line-height: 1.8; color: #555;">
-                        Today, Nexus Solutions is recognized as a leader in providing comprehensive business solutions
+                        Today, Increo Creative Solutions is recognized as a leader in providing comprehensive business solutions
                         that combine cutting-edge technology with strategic insights. Our team of experts continues to
                         push boundaries and deliver exceptional value to our clients.
                     </p>
@@ -1472,7 +1472,7 @@
                             <h3>Sarah Johnson</h3>
                             <div class="member-position">Client Services Manager</div>
                             <p>Sarah ensures our clients receive exceptional service and support throughout their
-                                journey with Nexus Solutions.</p>
+                                journey with Increo Creative Solutions.</p>
                             <div class="member-social">
                                 <a href="#"><i class="fab fa-linkedin"></i></a>
                                 <a href="#"><i class="fab fa-twitter"></i></a>
@@ -2042,7 +2042,7 @@
         <div class="footer-container">
             <div class="footer-col">
                 <h4>About Us</h4>
-                <p style="color: #ecf0f1; line-height: 1.6; margin-bottom: 1rem;">Nexus Solutions provides innovative
+                <p style="color: #ecf0f1; line-height: 1.6; margin-bottom: 1rem;">Increo Creative Solutions provides innovative
                     business solutions to help companies thrive in today's digital landscape.</p>
                 <div class="footer-social">
                     <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
@@ -2086,7 +2086,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 Nexus Solutions. All Rights Reserved.</p>
+            <p>&copy; 2025 Increo Creative Solutions. All Rights Reserved.</p>
         </div>
     </footer>
 
