--- a/index.html
+++ b/index.html
@@ -1421,9 +1421,9 @@
                             <i class="fas fa-user"></i>
                         </div>
                         <div class="member-info">
-                            <h3>John Davis</h3>
-                            <div class="member-position">CEO & Founder</div>
-                            <p>With over 20 years of experience in business management and technology, John leads Nexus
+                            <h3>John Aldin Arguelles</h3>
+                            <div class="member-position">Developer</div>
+                            <p>With 1 year of experience in business management and technology, John leads Nexus
                                 Solutions with vision and expertise.</p>
                             <div class="member-social">
                                 <a href="#"><i class="fab fa-linkedin"></i></a>
@@ -1437,42 +1437,10 @@
                             <i class="fas fa-user"></i>
                         </div>
                         <div class="member-info">
-                            <h3>Lisa Chen</h3>
-                            <div class="member-position">CTO</div>
-                            <p>Lisa brings technical innovation and strategic thinking to our technology solutions,
+                            <h3>RJ Liwag</h3>
+                            <div class="member-position">Project Manager</div>
+                            <p>RJ brings technical innovation and strategic thinking to our technology solutions,
                                 ensuring we stay at the cutting edge.</p>
-                            <div class="member-social">
-                                <a href="#"><i class="fab fa-linkedin"></i></a>
-                                <a href="#"><i class="fab fa-twitter"></i></a>
-                                <a href="#"><i class="fas fa-envelope"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="team-member animate">
-                        <div class="member-img">
-                            <i class="fas fa-user"></i>
-                        </div>
-                        <div class="member-info">
-                            <h3>Mark Wilson</h3>
-                            <div class="member-position">Marketing Director</div>
-                            <p>Mark develops and implements our marketing strategies, helping clients discover the
-                                solutions that meet their needs.</p>
-                            <div class="member-social">
-                                <a href="#"><i class="fab fa-linkedin"></i></a>
-                                <a href="#"><i class="fab fa-twitter"></i></a>
-                                <a href="#"><i class="fas fa-envelope"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="team-member animate">
-                        <div class="member-img">
-                            <i class="fas fa-user"></i>
-                        </div>
-                        <div class="member-info">
-                            <h3>Sarah Johnson</h3>
-                            <div class="member-position">Client Services Manager</div>
-                            <p>Sarah ensures our clients receive exceptional service and support throughout their
-                                journey with Increo Creative Solutions.</p>
                             <div class="member-social">
                                 <a href="#"><i class="fab fa-linkedin"></i></a>
                                 <a href="#"><i class="fab fa-twitter"></i></a>
