--- a/index.html
+++ b/index.html
@@ -1077,7 +1077,7 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="logo">
-            <div class="logo-text">Nexus<span style="color: var(--secondary);">Solutions</span></div>
+            <div class="logo-text">Increo Creative<span style="color: var(--secondary);">Solutions</span></div>
         </div>
         <ul class="nav-links">
             <li><a href="#" class="active nav-link" data-page="home">Home</a></li>
@@ -1281,7 +1281,7 @@
                             </div>
                             <div class="contact-details">
                                 <h4>Email Address</h4>
-                                <p>info@nexussolutions.com<br>support@nexussolutions.com</p>
+                                <p>info@increocreativesolutions.com<br>support@increocreativesolutions.com</p>
                             </div>
                         </div>
                         <div class="contact-item">
@@ -1423,7 +1423,7 @@
                         <div class="member-info">
                             <h3>John Aldin Arguelles</h3>
                             <div class="member-position">Developer</div>
-                            <p>With 1 year of experience in business management and technology, John leads Nexus
+                            <p>With 1 year of experience in business management and technology, John leads Increo Creative
                                 Solutions with vision and expertise.</p>
                             <div class="member-social">
                                 <a href="#"><i class="fab fa-linkedin"></i></a>
@@ -1654,7 +1654,7 @@
                             <div class="product-badge">Popular</div>
                         </div>
                         <div class="product-content">
-                            <h3 class="product-title">NexusAnalytics Pro</h3>
+                            <h3 class="product-title">increocreativeAnalytics Pro</h3>
                             <div class="product-price">Starting at $299/month</div>
                             <p class="product-desc">Comprehensive business analytics platform with real-time dashboards,
                                 predictive modeling, and customizable reports.</p>
@@ -1674,7 +1674,7 @@
                         </div>
                     </div>
                     <div class="product-card animate shine-effect">
-                        <div class="product<h3 class=" product-title">NexusCloud Platform</h3>
+                        <div class="product<h3 class=" product-title">increocreativeCloud Platform</h3>
                             <div class="product-price">Starting at $249/month</div>
                             <p class="product-desc">Scalable cloud infrastructure solution with automated deployment,
                                 monitoring, and management tools.</p>
@@ -1940,7 +1940,7 @@
                             </div>
                             <div class="contact-details">
                                 <h4>Email Address</h4>
-                                <p>info@nexussolutions.com<br>support@nexussolutions.com</p>
+                                <p>info@increocreativesolutions.com<br>support@increocreativesolutions.com</p>
                             </div>
                         </div>
                         <div class="contact-item">
@@ -2047,7 +2047,7 @@
                     <li><i class="fas fa-phone-alt" style="margin-right: 10px; color: var(--secondary);"></i> +1 (555)
                         123-4567</li>
                     <li><i class="fas fa-envelope" style="margin-right: 10px; color: var(--secondary);"></i>
-                        info@nexussolutions.com</li>
+                        info@increocreativesolutions.com</li>
                     <li><i class="fas fa-clock" style="margin-right: 10px; color: var(--secondary);"></i> Mon-Fri:
                         9AM-6PM</li>
                 </ul>
